force-app/main/default/objects/Onboarding_Steps_Template__c/Onboarding_Steps_Template__c.object-meta.xml
<CustomObject>
    <label>Onboarding Steps Template</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Onboarding Steps Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Steps Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>