force-app/main/default/objects/Onboarding_Steps_Template__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed User</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
            <value>
                <fullName>Opportunity Owner</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>