force-app/main/default/objects/Onboarding_Steps_Template__c/fields/Email_Notification_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Template_Name__c</fullName>
    <label>Email Notification Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>