force-app/main/default/objects/Onboarding_Steps_Template__c/fields/Fixed_Queue_Name_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Queue_Name_Assignment__c</fullName>
    <label>Fixed Queue Name Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>