force-app/main/default/objects/Onboarding_Steps_Template__c/fields/Fixed_User_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Fixed_User_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed User Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboarding_Steps_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>