force-app/main/default/objects/Onboarding_Steps_Template__c/fields/Flow_Choice_Displayed_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Choice_Displayed_Name__c</fullName>
    <formula>TEXT(Onboarding_Status__c) &amp; &quot; - &quot; &amp;  Template_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Choice Displayed Name</label>
    <type>Text</type>
</CustomField>