force-app/main/default/objects/Onboarding_Steps_Template__c/fields/Has_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Has_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Email Notification</label>
    <type>Checkbox</type>
</CustomField>